--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-Flask
-Flask-Cors
 scipy==1.4.1
 tensorflow==2.4.0
 dlib==19.21.1
-opencv-python==4.5.1.48
-tflite==2.4.0
+opencv_python==4.5.1.48
+tflite_runtime
 numpy==1.19.2
-cmake
-matplotlib
-opencv-contrib-python
