--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 Flask
 Flask-Cors
-scipy==1.4.1
-tensorflow==2.4.0
-dlib==19.21.1
-opencv-python==4.5.1.48
-tflite==2.4.0
-numpy==1.19.2
+NumPy
+scipy
+argparse
+imutils
+OpenCV-python
 cmake
-matplotlib
-opencv-contrib-python
+dlib
